# reinforcement_learning_pipeline

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  build_gpudrive.py  eval.py  main.py  pyproject.toml  requirements.txt  train.py  train_imitation.py
.github/workflows/: ci.yml
config/: config_classes.py  env_config_classes.py  main.yaml  train.yaml  train_imitation.yaml
config/env/: carla.yaml  env_config_classes.py
envs/: callbacks.py  carla_env.py
envs/configs/: config.yaml
envs/observation/: vector_BEV_observer.py
envs/reward/: base_reward.py
imitation_learning/: carla_autopilot_datacollect.py  train_il.py  train_imitation.py
models/: preprocess.py
src/core/: hydra.py
src/envs/: callbacks.py  carla_env.py  carla_env_render.py  carla_env_v2.py  utils.py  viz.py
src/envs/actions/: action_manager.py
src/envs/actions/act_integration/: fp_helper.py  frenet_polynomials.py  rss_utils_poly_calc.py  spline.py
src/envs/configs/: config.yaml
src/envs/observation/: observation_manager.py  tr_costs.py  vector_BEV_observer.py
src/envs/observation/decision_traffic_rules/: feature_indices.py  traffic_sign_db.py
src/envs/reward/: __init__.py  base_reward.py  default_reward.py  reward_fc.py  reward_function.py  reward_manager.py  reward_term_base.py  reward_terms.py
src/models/: preprocess.py
src/models/active_inference/: configs.yaml  dreamer.py  models.py  networks.py  requirements.txt  small_encoder.py  tools.py
src/models/active_inference/DATA_DIR/evaldir/: 20250915T141759-37e12ce7813944d6ae6a933144716375-100.npz  20250915T142558-96c401da2f2a49f7acf37b1e22848499-51.npz  20250915T142610-32e9457423df42c39d20c103ee695608-104.npz  20250915T142637-70aff0ee3afc48dcb7246d0f5ae14403-301.npz  20250915T142749-3d718bc90d7e4500a02b5b1a312beaf9-301.npz  20250915T142900-e0b8e6fa70fd4655afaee8721ae7472b-18.npz  20250915T142904-055b4b5c70f14c00bc00245078dbb690-2.npz  20250915T142905-97ecfc0c61a448eaa3e9174aa1ad5706-301.npz  20250915T143016-1921904b5a354c5abe089f328ba9e1f8-63.npz  20250915T143031-4996f4dfa7494987ab31e0889604eb6e-301.npz  20250915T143148-b49917e332b34b95b35aed032ba0f324-26.npz  20250915T144158-f7c013eb73024bc58155ee2f9e603227-50.npz  20250915T144211-e5b4bc13e02541c183663044680221e1-122.npz  20250915T144240-ab42e7113deb499283ddff76a3df239c-301.npz  20250915T144354-d9db65202829496daa3bb0cc1bd0a08e-301.npz  20250915T144509-e74723ca1bf2485fb40de9d0929ed45f-19.npz  20250915T144513-575054ade9534243addbe81904320269-18.npz  20250915T144518-501ddc86df2f4b7a81eb402c2af45a9f-301.npz  20250915T144631-de21f18604d3465fb6bced7f645eb467-66.npz  20250915T144648-2a4e1c840c6b438cae00cf424adbcff4-301.npz  20250915T144809-cf7b0f0c31f04a61a7fa2887238cbd4b-36.npz
src/models/active_inference/dreamerv3/: agent.py  configs.yaml  main.py  rssm.py
src/models/active_inference/embodied/envs/: carla.py
src/models/active_inference/envs/: wrappers.py
src/models/active_inference/envs/setup_scripts/roms/: Roms.rar
src/models/dipp_predictor_py/: dipp_carla.py
typings/carla/: __init__.pyi
