[project]
name = "reinforcement-learning-pipeline"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "carla==0.9.16",
    "gpudrive",
    "hydra-core>=1.3.2",
    "shapely>=2.1.2", # used in act_integration
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "jaxlib==0.5.3",  # issue of gpudrive, see https://github.com/Emerge-Lab/gpudrive/issues/464
]


[tool.uv.sources]
gpudrive = { path = "external/gpudrive", editable = true }
